--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
+  background-color: #eee;
+  height: 100%;
+}
+
+.info{
+  margin-top: 48px;
+  height: 100%;
+  padding: 10px 50px;
+}
+#news{
+  margin-top: 15px;
+}
+.data-table{
+  height: 650px;
+  margin-top: 15px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  overflow-y: scroll;
 }
